This file documents the revision history for mod_gearman.

5.1.9 Tue Jun  3 14:47:56 CEST 2025
          - rebuild with naemon 1.4.4

5.1.8 Sun Feb 16 23:15:47 CET 2025
          - fix minor memory leak

5.1.7 Fri Nov 22 13:24:08 CET 2024
          - fix occasional crash during reload

5.1.6 Wed Nov 13 16:32:58 CET 2024
          - remove delay in result worker shutdown

5.1.5 Thu Nov  7 09:52:24 CET 2024
          - improve result worker shutdown
          - fix occasional crashes during core reload
          - add millisecond precision to logs
          - add support for global notifications
          - add initial target queue into job data
          - send_gearman: use encryption if key is available

5.1.4 Wed Aug 28 09:55:09 CEST 2024
          - fix backslashes in plugin_output

5.1.3 Tue Oct 17 23:32:07 CEST 2023
          - check_dummy: fix crash if output is empty
          - check_dummy: support putting return code in quotes

5.1.2 Thu Jun 29 11:02:35 CEST 2023
          - neb: add internal check_dummy
          - change pid file location to /run in packages

5.1.1 Wed Jun 21 14:57:30 CEST 2023
          - neb: fix gearmand memory leak (#167)
          - gearman_top: fix extracting gearmand version
          - fix base64 decode errors if source contains newlines

5.1.0 Wed Mar  8 08:24:27 CET 2023
          - reopen logfile after core rotation
          - add latency_flatten_window option

5.0.2 Sun Feb  5 19:05:17 CET 2023
          - fix crash when using multiple result worker in neb module

5.0.1 Fri Jan 27 16:21:36 CET 2023
          - fix accepting passive plaintext results

5.0.1 Fri Jan 27 16:21:36 CET 2023
          - fix memory corruption during decryption

5.0.0 Wed Jan 11 11:49:36 CET 2023
          - switch to openssl for all aes/base64 and digest functions

4.0.3 Wed Aug 24 10:48:50 CEST 2022
          - add 'log_stats_interval' option
          - add support for check_gearman checking result queue worker / core statistics