@@ -1,5 +1,8 @@
 This file documents the revision history for mod_gearman.
 
+next:
+          - add support for configurable performance data templates
+
 5.1.9 Tue Jun  3 14:47:56 CEST 2025
           - rebuild with naemon 1.4.4
 
@@ -77,7 +80,7 @@ This file documents the revision history for mod_gearman.
           - fix calculating uniq string
 
 3.3.2 Wed Aug 19 16:19:35 CEST 2020
-          - use base64 encoded uniq idendifiers
+          - use base64 encoded uniq identifiers
           - gearman_top: read address:port from env variable CONFIG_GEARMAND_PORT (#153)
 
 3.3.1 Thu Jun 25 22:52:20 CEST 2020
